Fixed layout bug in program manager

--- a/frontend/src/layout.css
+++ b/frontend/src/layout.css
@@ -285,4 +285,5 @@ textarea {
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 2;
+    z-index: 200;
 }
